fix: modify swagger docs
